Fix image particle flickering due to broken state machine logic

A null QSGNode cannot be returned since that leads to not showing anything
in the next frame. That is unacceptable in case there are already
particles displayed and we are merely regenerating due to the increased
number of particles.

Task-number: QTBUG-54673
Change-Id: If610c56f6d82d35a8de6b435fd8b18ceb7adf2e7
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>